[tool.ruff]
line-length = 120
target-version = "py39"

exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "venv",
    "env",
    "docs",
    "dist",
    "build",
    ".pytest_cache",
]

[tool.ruff.lint]
select = ["E", "F", "W", "A", "B", "N", "UP", "T", "PL", "RUF", "I"]
ignore = ["PLC1901", "PLR0913", "PLR2004", "PLW2901", "N805", "N999", "A001"]

[tool.ruff.lint.isort]
known-first-party = ["gardena_smartsystem_prometheus_exporter"]

[tool.ruff.format]
quote-style = "double"

[project]
name = "gardena-smartsystem-prometheus-exporter"
version = "0.1.0"
description = ""
authors = [{name = "Florian Schweikert", email = "kelvan@ist-total.org"}]
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "confz>=2.0.0,<3",
    "prometheus-client>=0.17.1,<1",
    "uvicorn>=0.23.1,<1",
    "aiohttp>=3.8.4,<4",
    "cffi>=2.0.0",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.14.0,<9",
    "ruff>=0.0.278",
    "ty>=0.0.1a1",
    "types-requests>=2.31.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gardena_smartsystem_prometheus_exporter"]
